crates/mun_codegen/src/snapshots/mun_codegen__test__arithmetic_op_f32.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn add(a: f32, b: f32) -> f32 { a + b }\n    pub fn subtract(a: f32, b: f32) -> f32 { a - b }\n    pub fn multiply(a: f32, b: f32) -> f32 { a * b }\n    pub fn divide(a: f32, b: f32) -> f32 { a / b }\n    pub fn remainder(a: f32, b: f32) -> f32 { a % b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define float @add(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %add = fadd float %a1, %b2
  ret float %add
}

define float @subtract(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %sub = fsub float %a1, %b2
  ret float %sub
}

define float @multiply(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %mul = fmul float %a1, %b2
  ret float %mul
}

define float @divide(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %div = fdiv float %a1, %b2
  ret float %div
}

define float @remainder(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %rem = frem float %a1, %b2
  ret float %rem
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
