crates/mun_codegen/src/snapshots/mun_codegen__test__arithmetic_op_f64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn add(a: f64, b: f64) -> f64 { a + b }\n    pub fn subtract(a: f64, b: f64) -> f64 { a - b }\n    pub fn multiply(a: f64, b: f64) -> f64 { a * b }\n    pub fn divide(a: f64, b: f64) -> f64 { a / b }\n    pub fn remainder(a: f64, b: f64) -> f64 { a % b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define double @add(double %0, double %1) {
body:
  %b = alloca double, align 8
  store double %1, ptr %b, align 8
  %a = alloca double, align 8
  store double %0, ptr %a, align 8
  %a1 = load double, ptr %a, align 8
  %b2 = load double, ptr %b, align 8
  %add = fadd double %a1, %b2
  ret double %add
}

define double @subtract(double %0, double %1) {
body:
  %b = alloca double, align 8
  store double %1, ptr %b, align 8
  %a = alloca double, align 8
  store double %0, ptr %a, align 8
  %a1 = load double, ptr %a, align 8
  %b2 = load double, ptr %b, align 8
  %sub = fsub double %a1, %b2
  ret double %sub
}

define double @multiply(double %0, double %1) {
body:
  %b = alloca double, align 8
  store double %1, ptr %b, align 8
  %a = alloca double, align 8
  store double %0, ptr %a, align 8
  %a1 = load double, ptr %a, align 8
  %b2 = load double, ptr %b, align 8
  %mul = fmul double %a1, %b2
  ret double %mul
}

define double @divide(double %0, double %1) {
body:
  %b = alloca double, align 8
  store double %1, ptr %b, align 8
  %a = alloca double, align 8
  store double %0, ptr %a, align 8
  %a1 = load double, ptr %a, align 8
  %b2 = load double, ptr %b, align 8
  %div = fdiv double %a1, %b2
  ret double %div
}

define double @remainder(double %0, double %1) {
body:
  %b = alloca double, align 8
  store double %1, ptr %b, align 8
  %a = alloca double, align 8
  store double %0, ptr %a, align 8
  %a1 = load double, ptr %a, align 8
  %b2 = load double, ptr %b, align 8
  %rem = frem double %a1, %b2
  ret double %rem
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
