crates/mun_codegen/src/snapshots/mun_codegen__test__arithmetic_op_u16.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn add(a: u16, b: u16) -> u16 { a + b }\n    pub fn subtract(a: u16, b: u16) -> u16 { a - b }\n    pub fn multiply(a: u16, b: u16) -> u16 { a * b }\n    pub fn divide(a: u16, b: u16) -> u16 { a / b }\n    pub fn remainder(a: u16, b: u16) -> u16 { a % b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i16 @add(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %add = add i16 %a1, %b2
  ret i16 %add
}

define i16 @subtract(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %sub = sub i16 %a1, %b2
  ret i16 %sub
}

define i16 @multiply(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %mul = mul i16 %a1, %b2
  ret i16 %mul
}

define i16 @divide(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %div = udiv i16 %a1, %b2
  ret i16 %div
}

define i16 @remainder(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %rem = urem i16 %a1, %b2
  ret i16 %rem
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
