crates/mun_codegen/src/snapshots/mun_codegen__test__assign_bit_op_bool.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign_bitand(a: bool, b: bool) -> bool {\n        a &= b;\n        a\n    }\n    pub fn assign_bitor(a: bool, b: bool) -> bool {\n        a |= b;\n        a\n    }\n    pub fn assign_bitxor(a: bool, b: bool) -> bool {\n        a ^= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i1 @assign_bitand(i1 %0, i1 %1) {
body:
  %b = alloca i1, align 1
  store i1 %1, ptr %b, align 1
  %a = alloca i1, align 1
  store i1 %0, ptr %a, align 1
  %a1 = load i1, ptr %a, align 1
  %b2 = load i1, ptr %b, align 1
  %bit_and = and i1 %a1, %b2
  store i1 %bit_and, ptr %a, align 1
  %a3 = load i1, ptr %a, align 1
  ret i1 %a3
}

define i1 @assign_bitor(i1 %0, i1 %1) {
body:
  %b = alloca i1, align 1
  store i1 %1, ptr %b, align 1
  %a = alloca i1, align 1
  store i1 %0, ptr %a, align 1
  %a1 = load i1, ptr %a, align 1
  %b2 = load i1, ptr %b, align 1
  %bit_or = or i1 %a1, %b2
  store i1 %bit_or, ptr %a, align 1
  %a3 = load i1, ptr %a, align 1
  ret i1 %a3
}

define i1 @assign_bitxor(i1 %0, i1 %1) {
body:
  %b = alloca i1, align 1
  store i1 %1, ptr %b, align 1
  %a = alloca i1, align 1
  store i1 %0, ptr %a, align 1
  %a1 = load i1, ptr %a, align 1
  %b2 = load i1, ptr %b, align 1
  %bit_xor = xor i1 %a1, %b2
  store i1 %bit_xor, ptr %a, align 1
  %a3 = load i1, ptr %a, align 1
  ret i1 %a3
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
